--- a/src/patternfly/assets/fontawesome/_fixed-width.scss
+++ b/src/patternfly/assets/fontawesome/_fixed-width.scss
@@ -1,6 +1,6 @@
 // Fixed width icons
 // -------------------------
-@use './variables.scss' as *;
+@use './variables' as *;
 
 .#{$fa-css-prefix}-fw {
   text-align: center;
