--- a/src/patternfly/assets/fontawesome/_larger.scss
+++ b/src/patternfly/assets/fontawesome/_larger.scss
@@ -1,6 +1,6 @@
 // Icon sizes
 // -------------------------
-@use './variables.scss' as *;
+@use './variables' as *;
 @use 'sass:math';
 
 // makes the font 33% larger relative to the icon container
