--- a/src/patternfly/assets/fontawesome/_variables.scss
+++ b/src/patternfly/assets/fontawesome/_variables.scss
@@ -2,7 +2,6 @@
 // --------------------------
 @use 'sass:math';
 
-$fa-font-path:                "../webfonts" !default;
 $fa-font-size-base:           16px !default;
 $fa-css-prefix:               'fa' !default;
 $fa-version:                  "5.6.3" !default;
@@ -10,7 +9,7 @@ $fa-border-color:             #eee !default;
 $fa-inverse:                  #fff !default;
 $fa-li-width:                 2em !default;
 $fa-fw-width:                 math.div(20em, 16);
-
+$pf-v6-global--disable-fontawesome: false !default;
 // Convenience function used to set content property
 @function fa-content($fa-var) {
   @return unquote("\"#{ $fa-var }\"");
