--- a/src/patternfly/sass-utilities/mixins.scss
+++ b/src/patternfly/sass-utilities/mixins.scss
@@ -1,6 +1,6 @@
-@use '../sass-utilities/functions.scss' as *;
-@use '../sass-utilities/init.scss' as *;
-@use '../sass-utilities/scss-variables.scss' as *;
+@use '../sass-utilities/functions' as *;
+@use '../sass-utilities/init' as *;
+@use '../sass-utilities/scss-variables' as *;
 
 // Media query used to create responsive classes
 @mixin pf-v6-media-query($point) {
