--- a/src/patternfly/sass-utilities/namespaces-layouts.scss
+++ b/src/patternfly/sass-utilities/namespaces-layouts.scss
@@ -1,5 +1,5 @@
-@use '../sass-utilities/init.scss' as *;
-@use '../sass-utilities/scss-variables.scss' as *;
+@use '../sass-utilities/init' as *;
+@use '../sass-utilities/scss-variables' as *;
 
 // Globally scoped component variables
 // Bullseye
