--- a/src/patternfly/assets/fontawesome/_bordered-pulled.scss
+++ b/src/patternfly/assets/fontawesome/_bordered-pulled.scss
@@ -1,6 +1,6 @@
 // Bordered & pulled
 // -------------------------
-@use './variables.scss' as *;
+@use './variables' as *;
 
 .#{$fa-css-prefix}-border {
   border: solid .08em $fa-border-color;
