--- a/src/patternfly/assets/fontawesome/_screen-reader.scss
+++ b/src/patternfly/assets/fontawesome/_screen-reader.scss
@@ -1,6 +1,6 @@
 // Screen readers
 // -------------------------
-@use './mixins.scss' as *;
+@use './mixins' as *;
 
 .sr-only { @include sr-only; }
 .sr-only-focusable { @include sr-only-focusable; }
