--- a/src/patternfly/base/patternfly-fa-icons.scss
+++ b/src/patternfly/base/patternfly-fa-icons.scss
@@ -1,6 +1,7 @@
 // Font Awesome 5 icons https://fontawesome.com
 @use '../sass-utilities' as *;
-@use "../assets/fontawesome/fontawesome";
+@use "../assets/fontawesome/variables" as *;
+@use "../assets/fontawesome/icons" as icons;
 
 @if not($pf-v6-global--disable-fontawesome) {
   @if $pf-v6-global--enable-fontawesome-cdn {
@@ -24,5 +25,28 @@
       font-weight: 900;
     }
     // stylelint-enable
+
+    @include icons.pf-fa-icon-vars;
+  }
+}
+
+@mixin pf-fa-icon-base {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-flex;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+@if not($pf-v6-global--disable-fontawesome) {
+  .#{$fa-css-prefix},
+  .fa,
+  .fas,
+  .far,
+  .fal,
+  .fab {
+    @include pf-fa-icon-base;
   }
 }
