--- a/src/patternfly/sass-utilities/functions.scss
+++ b/src/patternfly/sass-utilities/functions.scss
@@ -1,7 +1,7 @@
 // PatternFly functions
 // --------------------------------------------------
-@use '../sass-utilities/scss-variables.scss' as *;
-@use '../sass-utilities/init.scss' as *;
+@use '../sass-utilities/scss-variables' as *;
+@use '../sass-utilities/init' as *;
 @use 'sass:math';
 
 // Transform px to rems
