fix(page): update from scroll to auto

--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -360,7 +360,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 }
 
 .#{$page}__main {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .#{$page}__main-subnav {
