--- a/src/patternfly/base/patternfly-fa-icons.scss
+++ b/src/patternfly/base/patternfly-fa-icons.scss
@@ -1,7 +1,8 @@
 // Font Awesome 5 icons https://fontawesome.com
 @use '../sass-utilities' as *;
-@use "../assets/fontawesome/variables" as *;
-@use "../assets/fontawesome/icons" as icons;
+@use '../assets/fontawesome/variables' as *;
+@use '../assets/fontawesome/icons' as icons;
+@use '../assets/fontawesome' as *;
 
 @if not($pf-v6-global--disable-fontawesome) {
   @if $pf-v6-global--enable-fontawesome-cdn {
@@ -33,7 +34,7 @@
 @mixin pf-fa-icon-base {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  display: inline-flex;
+  display: inline-block;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
