feat(FormControl): refine textarea styles

--- a/src/patternfly/components/FormControl/form-control.hbs
+++ b/src/patternfly/components/FormControl/form-control.hbs
@@ -9,6 +9,7 @@
   {{#if form-control--IsWarning}} pf-m-warning{{/if}}
   {{#if form-control--IsError}} pf-m-error{{/if}}
   {{#if form-control--HasIcon}} pf-m-icon{{/if}}
+  {{#if form-control--IsTextarea}} pf-m-textarea{{/if}}
   {{#if form-control--modifier}} {{form-control--modifier}}{{/if}}
 ">
   {{#ifEquals controlType "select"}}
