--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -7,6 +7,7 @@
   --#{$form-control}--LineHeight: var(--pf-t--global--font--line-height--body);
   --#{$form-control}--Resize: none;
   --#{$form-control}--OutlineOffset: -6px;
+  --#{$form-control}--OutlinePadding: calc(-1 * var(--#{$form-control}--OutlineOffset));
   --#{$form-control}--BorderRadius: var(--pf-t--global--border--radius--small);
   --#{$form-control}--before--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$form-control}--before--BorderColor: var(--pf-t--global--border--color--default);
@@ -23,6 +24,10 @@
   --#{$form-control}--PaddingBlockEnd: var(--pf-t--global--spacer--control--vertical--default);
   --#{$form-control}--PaddingInlineEnd: var(--#{$form-control}--inset--base);
   --#{$form-control}--PaddingInlineStart: var(--#{$form-control}--inset--base);
+  --#{$form-control}--TextArea--PaddingBlockStart: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--OutlinePadding));
+  --#{$form-control}--TextArea--PaddingBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--OutlinePadding));
+  --#{$form-control}--TextArea--PaddingInlineEnd: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--OutlinePadding));
+  --#{$form-control}--TextArea--PaddingInlineStart: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--OutlinePadding));
 
   // hover
   --#{$form-control}--hover--after--BorderWidth: var(--pf-t--global--border--width--control--hover);
@@ -155,15 +160,12 @@
     background-color: transparent;
     border: none;
     border-radius: var(--#{$form-control}--BorderRadius);
+    outline-offset: var(--#{$form-control}--OutlineOffset);
 
     // stylelint-disable
     -moz-appearance: none;
     -webkit-appearance: none;
     // stylelint-enable
-
-    &:focus {
-      outline-offset: var(--#{$form-control}--OutlineOffset);
-    }
   }
 
   > ::placeholder {
@@ -172,6 +174,18 @@
 
   > :is(input, select) {
     text-overflow: ellipsis;
+  }
+
+  &.pf-m-textarea {
+    padding: var(--#{$form-control}--OutlinePadding);
+
+    > :is(textarea) {
+      padding-block-start: var(--#{$form-control}--TextArea--PaddingBlockStart);
+      padding-block-end: var(--#{$form-control}--TextArea--PaddingBlockEnd);
+      padding-inline-start: var(--#{$form-control}--TextArea--PaddingInlineStart);
+      padding-inline-end: var(--#{$form-control}--TextArea--PaddingInlineEnd);
+      outline-offset: 0;
+    }
   }
 
   &.pf-m-readonly {
