fix(content): actually remove root, update content selector (#7074)

--- a/src/patternfly/components/Content/content.scss
+++ b/src/patternfly/components/Content/content.scss
@@ -1,6 +1,6 @@
 @use '../../sass-utilities' as *;
 
-@include pf-root($content) {
+@include pf-root(':root', false) {
   // Body
   --#{$content}--MarginBlockEnd: var(--pf-t--global--spacer--md);
   --#{$content}--LineHeight: var(--pf-t--global--font--line-height--body);
