chore(datalist): remove data-list-action hbs

--- a/src/patternfly/components/DataList/data-list-item-action.hbs
+++ b/src/patternfly/components/DataList/data-list-item-action.hbs
@@ -5,6 +5,10 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    {{> data-list-action}}
+    {{> menu-toggle
+      menu-toggle--IsPlain=true
+      menu-toggle--HasKebab=true
+      menu-toggle--id=(dasherize data-list--id data-list-item--id 'menu-toggle')
+      menu-toggle--aria-label='Data list item menu toggle'}}
   {{/if}}
 </div>
